--- a/client/src/components/lights/LightCard.css
+++ b/client/src/components/lights/LightCard.css
@@ -1,6 +1,6 @@
 .light-card {
-    margin: 10px 10px;
-    max-width: 300px;
+    display: inline-block;
+    margin: 0 12px;
 }
 
 /* Card cover */
