--- a/client/src/components/Navigation.css
+++ b/client/src/components/Navigation.css
@@ -1,7 +1,38 @@
-.nav-item > * {
+.nav-menu {
+    text-align: center;
+}
+
+.nav-item {
+    display: inline-block;
+    padding-left: 16px;
+    padding-right: 16px;
+    height: 64px;
+    color: rgba(255, 255, 255, 0.80);
+}
+
+.nav-item>* {
     vertical-align: middle;
 }
 
-.nav-item > span {
+.nav-item>span {
     margin-left: 12px;
+}
+
+.nav-item-active,
+.nav-item-active:focus {
+    background-color: #1890ff;
+    color: #fff;
+    text-decoration: none;
+}
+
+@media screen and (max-width: 600px) {
+    .nav-item>span {
+        display: none;
+        margin-left: 30px;
+    }
+
+    .nav-item {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
 }
