--- a/client/src/components/Navigation.css
+++ b/client/src/components/Navigation.css
@@ -4,18 +4,9 @@
 
 .nav-item {
     display: inline-block;
-    padding-left: 16px;
-    padding-right: 16px;
     height: 64px;
+    padding: 6px 16px 2px 16px;
     color: rgba(255, 255, 255, 0.80);
-}
-
-.nav-item>* {
-    vertical-align: middle;
-}
-
-.nav-item>span {
-    margin-left: 12px;
 }
 
 .nav-item-active,
@@ -23,16 +14,4 @@
     background-color: #1890ff;
     color: #fff;
     text-decoration: none;
-}
-
-@media screen and (max-width: 600px) {
-    .nav-item>span {
-        display: none;
-        margin-left: 30px;
-    }
-
-    .nav-item {
-        padding-left: 24px;
-        padding-right: 24px;
-    }
 }
