--- a/src/client/components/gateway/Gateway.css
+++ b/src/client/components/gateway/Gateway.css
@@ -1,4 +1,7 @@
-.card-container {
-    display: flex;
-    flex-flow: row wrap
+.spinner {
+    margin-top: 240px;
+}
+
+.spinner__icon {
+    font-size: 24;
 }
