--- a/src/client/containers/lights/LightGroupsTab.css
+++ b/src/client/containers/lights/LightGroupsTab.css
@@ -43,3 +43,11 @@
 .light-group__table tr:nth-of-type(1)>td:nth-of-type(3)>:first-child {
     margin-left: 6px;
 }
+
+.light-group__lights-header {
+    text-align: left;
+    color: rgba(0, 0, 0, 0.85);
+    font-weight: 500;
+    margin-left: 4px;
+    margin-bottom: 8px;
+}
