--- a/src/client/components/gateway/Gateway.css
+++ b/src/client/components/gateway/Gateway.css
@@ -1,1 +1,42 @@
 
+.gateway {
+    display: inline-block;
+    margin: 0 12px;
+}
+
+/* Card cover */
+
+.gateway__cover {
+    text-align: center;
+    margin-top: 10px;
+}
+
+/* Card title */
+
+.gateway__title {
+    display: flex;
+}
+
+.gateway__title>span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.gateway__name-edit {
+    margin-left: 4px;
+    margin-top: 2px;
+    cursor: pointer;
+}
+
+/* Card title popover */
+
+.gateway__popover {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.gateway__popover>button {
+    margin-top: 12px;
+    width: 40%;
+}
