WIP: Gateway action buttons and update name action

--- a/src/client/components/gateway/Gateway.css
+++ b/src/client/components/gateway/Gateway.css
@@ -4,6 +4,14 @@
     margin: 0 12px;
 }
 
+.gateway__actions {
+    padding: 4px 0px;
+}
+
+.gateway__actions>button {
+    margin-right: 4px;
+}
+
 /* Card cover */
 
 .gateway__cover {
