--- a/src/client/components/gateway/Gateway.css
+++ b/src/client/components/gateway/Gateway.css
@@ -12,39 +12,21 @@
     margin-right: 4px;
 }
 
-/* Card cover */
+/* Gateway details table */
 
-.gateway__cover {
-    text-align: center;
-    margin-top: 10px;
+.gateway__table {
+    border-spacing: 120px;
 }
 
-/* Card title */
-
-.gateway__title {
-    display: flex;
+.gateway__table td {
+    vertical-align: middle;
+    height: 30px;
 }
 
-.gateway__title>span {
-    overflow: hidden;
-    text-overflow: ellipsis;
+.gateway__table td:nth-of-type(1) {
+    font-weight: bold;
 }
 
-.gateway__name-edit {
-    margin-left: 4px;
-    margin-top: 2px;
-    cursor: pointer;
-}
-
-/* Card title popover */
-
-.gateway__popover {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-
-.gateway__popover>button {
-    margin-top: 12px;
-    width: 40%;
+.gateway__table td:nth-of-type(2) {
+    padding-left: 12px
 }
