--- a/src/client/containers/App.css
+++ b/src/client/containers/App.css
@@ -15,6 +15,12 @@
   line-height: normal;
 }
 
+.app_alert {
+  margin-top: 10;
+  margin-left: 10;
+  margin-right: 10;
+}
+
 .app__footer {
   background-color: rgb(255, 255, 255);
   text-align: center;
